--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@
 *.key
 *.pem
 secrets/
+claude_desktop_config.json.backup
+setup_env_unix.sh.backup
+*config*key*
+*secret*
 
 # Node modules (if you add Node.js later)
 node_modules/
