Update .env.example configuration

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
 
 # Gemini API (if used)
 GEMINI_API_KEY=your-gemini-api-key-here
+
+DISABLED_TOOLS=analyze,refactor,testgen,secaudit,docgen,tracer
